--- a/src/style.scss
+++ b/src/style.scss
@@ -26,6 +26,10 @@ main {
     flex-direction: column;
 }
 
+html {
+    background: #1c1c1c;
+}
+
 // html, body, #__next {
 //     height: 100%;
 // }
